# estudio-backend

./: .cursorrules  .gitignore  Dockerfile  Dockerfile.armv8  Procfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
app/: main.py
app/core/: openapi.py
app/models/: geometry.py  pdi.py  video.py  websocket.py
app/routes/: processing_router.py  video_router.py  websocket_router.py
app/services/: pdi_service.py  video_manager.py  websocket_manager.py
app/tests/: conftest.py  main_test.py
app/tests/integration/: test_main.py  test_processing_router.py  test_video_routes.py  test_websocket.py
app/tests/unit/: test_pdi_service.py  test_shape_detection.py  test_video_manager.py
